--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boolando</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;@300;@400;@500;@700&display=swap" rel="stylesheet">    
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
+        <!-- header -->
+        <header>
+            <div class="h-jumbotron">
+                <div class="container">
+                    <div class="h-row">
+                        <div class="col-100">
+                            <div class="h-content">
+                                <div class="h-options">
+                                    <span class=" left-menu">Donna</span>
+                                    <span class="left-menu">Uomo</span>
+                                    <span class=" left-menu">Bambini</span>
+                                </div>
+                                <img src="./img/boolean-logo.png" alt="boolean-logo" class="logo">
+                                <div class="h-options right-menu">
+                                    <span class="right-menu"><i class="fa-regular fa-user"></i></span>
+                                    <span class="right-menu"><i class="fa-regular fa-heart"></i></span>
+                                    <span class="right-menu"><i class="fa-solid fa-bag-shopping"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- fine header -->
     </body>
 </html>
