--- a/index.html
+++ b/index.html
@@ -37,5 +37,126 @@
             </div>
         </header>
         <!-- fine header -->
+        <!-- main -->
+        <main>
+            <div class="container">
+                <div class="row">
+                    <!-- col - Relaxed Fit Tee Unisex  -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/1.webp" alt="first-image" class="first-image">
+                            <img src="./img/1b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square">
+                            <span class="heart">&hearts;</span>
+                        </div>
+                        <div class="rectangle">
+                            <div class="red-rectangle">
+                                <span class="rectangle-content">-50%</span>
+                            </div>
+                            <div class="green-rectangle">
+                                <span class="rectangle-content">Sostenibilità</span>
+                            </div>
+                        </div>
+                        <span class="brand">Levi's</span>
+                        <h4>Relaxed Fit Tee Unisex</h4>
+                        <span class="price">14,99 &#8364;</span>
+                        <del>29,99 &#8364;</del>
+                    </div>
+                    <!-- fine col - Relaxed Fit Tee Unisex  -->
+                    <!-- col - Roses Tee -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/2.webp" alt="first-image" class="first-image">
+                            <img src="./img/2b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square"><span class="heart">&hearts;</span></div>
+                        <div class="rectangle">
+                            <div class="red-rectangle">
+                                <span class="rectangle-content">-30%</span>
+                            </div>
+                        </div>
+                        <span class="brand">Guess</span>
+                        <h4>Roses Tee</h4>
+                        <span class="price">20,99 &#8364;</span>
+                        <del>29,99 &#8364;</del>
+                    </div>
+                    <!-- fine col - Roses Tee -->
+                    <!-- col - Voglia di Colori Pastello  -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/3.webp" alt="first-image" class="first-image">
+                            <img src="./img/3b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square">
+                            <span class="heart">&hearts;</span>
+                        </div>
+                        <div class="rectangle">
+                            <div class="red-rectangle">
+                                <span class="rectangle-content">-30%</span>
+                            </div>
+                        </div>
+                        <span class="brand">Come Zucchero Filato</span>
+                        <h4>Voglia di Colore Pastello</h4>
+                        <span class="price">129,99 &#8364;</span>
+                        <del>184,99 &#8364;</del>
+                    </div>
+                    <!-- fine col - Voglia di Colori Pastello -->
+                    <!-- col - Tee Unisex -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/4.webp" alt="first-image" class="first-image">
+                            <img src="./img/4b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square">
+                            <span class="heart">&hearts;</span>
+                        </div>
+                        <div class="rectangle">
+                            <div class="red-rectangle">
+                                <span class="rectangle-content">-50%</span>
+                            </div>
+                            <div class="green-rectangle">
+                                <span class="rectangle-content">Sostenibilita</span>
+                            </div>
+                        </div>
+                        <span class="brand">Levi's</span>
+                        <h4>tee unisex</h4>
+                        <span class="price">14,99 &#8364;</span>
+                        <del>29,99 &#8364;</del>
+                    </div>
+                    <!-- fine col - Tee Unisex -->
+                    <!-- col - Stripe Bodice -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/5.webp" alt="first-image" class="first-image">
+                            <img src="./img/5b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square">
+                            <span class="heart">&hearts;</span>
+                        </div>
+                        <span class="brand">Maya Deluxe</span>
+                        <h4>Stripe Bodice</h4>
+                        <span class="price">99,99 &#8364;</span>
+                    </div>
+                    <!-- fine col - Stripe Bodice -->
+                    <!-- col - Maglione Black -->
+                    <div class="col-33">
+                        <div>
+                            <img src="./img/6.webp" alt="first-image" class="first-image">
+                            <img src="./img/6b.webp" alt="second-image" class="second-image">
+                        </div>
+                        <div class="heart-square"><span class="heart">&hearts;</span></div>
+                        <div class="rectangle">
+                            <div class="green-rectangle"><span class="rectangle-content">Sostenibilita</span></div>
+                        </div>
+                        <span class="brand">Esprit</span>
+                        <h4>Maglione - Black</h4>
+                        <span class="price">29,99 &#8364;</span>
+                    </div>
+                    <!-- fine col - Maglione Black -->
+                </div>
+            </div>
+        </main>
+        <!-- fine main -->
     </body>
 </html>
