--- a/index.html
+++ b/index.html
@@ -158,5 +158,45 @@
             </div>
         </main>
         <!-- fine main -->
+        <!-- footer -->
+        <footer>
+            <div class="f-jumbotron">
+                <div class="container">
+                    <div class="f-row">
+                        <div class="col-100">
+                            <div class="f-content">
+                                <div>
+                                    <h3>Boolando s.r.l.</h3>
+                                    <span class="info">Informazioni legali</span>
+                                    <span class="info">Informativa sulla privacy</span>
+                                    <span class="info">Diritto di recesso</span>
+                                </div>
+                                <div>
+                                    <h5>Trovaci anche su</h5>
+                                    <ul>
+                                        <li>
+                                            <div class="social-logos"><i class="fa-brands fa-twitter"></i></div>
+                                        </li>
+                                        <li>
+                                            <div class="social-logos"><i class="fa-brands fa-facebook-f"></i></div>
+                                        </li>
+                                        <li>
+                                            <div class="social-logos"><i class="fa-brands fa-instagram"></i></div>
+                                        </li>
+                                        <li>
+                                            <div class="social-logos"><i class="fa-brands fa-pinterest-p"></i></div>
+                                        </li>
+                                        <li>
+                                            <div class="social-logos"><i class="fa-brands fa-youtube"></i></div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- fine footer -->
     </body>
 </html>
